--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Recyclebin/App_LocalResources/recyclebin.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Recyclebin/App_LocalResources/recyclebin.nl-NL.resx
@@ -111,7 +111,7 @@
   </data>
   <data name="Prompt_PurgeUser_ResultHtml.Text" xml:space="preserve">
     <value>&lt;h4&gt;Verwijdert een gebruiker permanent&lt;/h4&gt;
-    &lt;p&gt;Verwijdert de gebruiker met GebruikersID van 345 permanent.  Als je het commando ode&gt;get-user 345&lt;/code&gt; uitvoert krijgt u een 'gebruiker niet gevonden' bericht.. &lt;/p&gt;
+    &lt;p&gt;Verwijdert de gebruiker met GebruikersID van 345 permanent.  Als je het commando ode&gt;get-user 345&lt;/code&gt; uitvoert krijg je een 'gebruiker niet gevonden' bericht.. &lt;/p&gt;
     &lt;code class="block"&gt;purge-user 345&lt;/code&gt;
     &lt;p&gt;Dit is de nauwkeurigerer vorm van de bovenstaande code.&lt;/p&gt;
     &lt;code class="block"&gt;purge-user --id 345&lt;/code&gt;</value>
@@ -123,10 +123,10 @@
     <value>Herstelt een module uit de DNN-Prullenbak.</value>
   </data>
   <data name="Prompt_RestoreModule_FlagId.Text" xml:space="preserve">
-    <value>Geeft expliciet het module Id van de module die opgehaald moet worden. Gebruik van de markering is niet nodig. U kunt eenvoudig de waarde van het ID als eerste argument opgeven.</value>
+    <value>Geeft expliciet het module Id van de module die opgehaald moet worden. Gebruik van de markering is niet nodig. Je kunt eenvoudig de waarde van het ID als eerste argument opgeven.</value>
   </data>
   <data name="Prompt_RestoreModule_FlagPageId.Text" xml:space="preserve">
-    <value>Het pagina-ID van de pagina waarop de module die u wilt terugzetten zich bevond vóór verwijdering.</value>
+    <value>Het pagina-ID van de pagina waarop de module die je wilt terugzetten zich bevond vóór verwijdering.</value>
   </data>
   <data name="Prompt_RestoreModule_ResultHtml.Text" xml:space="preserve">
     <value>&lt;h4&gt;Herstel een module uit de prullenbak&lt;/h4&gt;
@@ -142,13 +142,13 @@
     <value>Herstelt een pagina uit de DNN-Prullenbak.</value>
   </data>
   <data name="Prompt_RestorePage_FlagId.Text" xml:space="preserve">
-    <value>Geeft expliciet het pagina-ID aan die moet worden verwijderd. Gebruik van de markeringnaam is niet vereist. U kunt eenvoudig de ID-waarde als het eerste argument opgeven. Vereist als &lt;span class="mono"&gt;-parentid&lt;/span&gt; en &lt;span class="mono"&gt;-name&lt;/span&gt; niet zijn opgegeven.</value>
+    <value>Geeft expliciet het pagina-ID aan die moet worden verwijderd. Gebruik van de markeringnaam is niet vereist. Je kunt eenvoudig de ID-waarde als het eerste argument opgeven. Vereist als &lt;span class="mono"&gt;-parentid&lt;/span&gt; en &lt;span class="mono"&gt;-name&lt;/span&gt; niet zijn opgegeven.</value>
   </data>
   <data name="Prompt_RestorePage_FlagName.Text" xml:space="preserve">
     <value>Specificeert de naam (niet de titel) van de pagina die moet worden hersteld. Dit kan worden gecombineerd met &lt;span class="mono"&gt;-parentid&lt;/span&gt; om een paginanaam te targeten met een specifieke bovenliggende pagina. Vereist als &lt;span class = "mono"&gt; - parentid &lt;/ span&gt; en &lt;span class = "mono"&gt; - name &lt;/ span&gt; niet zijn opgegeven.</value>
   </data>
   <data name="Prompt_RestorePage_FlagParentId.Text" xml:space="preserve">
-    <value>Vereist als u een pagina op naam wilt verwijderen en de pagina is een onderliggende pagina van een andere pagina. Geef in dat geval het ID van de bovenliggende pagina op.</value>
+    <value>Vereist als je een pagina op naam wilt verwijderen en de pagina is een onderliggende pagina van een andere pagina. Geef in dat geval het ID van de bovenliggende pagina op.</value>
   </data>
   <data name="Prompt_RestorePage_ResultHtml.Text" xml:space="preserve">
     <value>&lt;div&gt;
@@ -183,7 +183,7 @@
   </data>
   <data name="Prompt_RestoreUser_ResultHtml.Text" xml:space="preserve">
     <value>&lt;h4&gt;Herstel een verwijderde gebruiker&lt;/h4&gt;
-         &lt;p&gt;RHerstelt de gebruiker met een gebruikers-ID van 345. Als de gebruiker niet is verwijderd, ontvangt u een bericht dat aangeeft dat er niets te herstellen is. Als de gebruiker al is opgeschoond (of 'verwijderd' via de gebruikersinterface van DNN, ontvangt u een bericht 'gebruiker niet gevonden'. &lt;/p&gt;
+         &lt;p&gt;Herstelt de gebruiker met een gebruikers-ID van 345. Als de gebruiker niet is verwijderd, ontvang je een bericht dat aangeeft dat er niets te herstellen is. Als de gebruiker al is opgeschoond (of 'verwijderd' via de gebruikersinterface van DNN, ontvang je een bericht 'gebruiker niet gevonden'. &lt;/p&gt;
         &lt;code class="block"&gt;restore-user 345&lt;/code&gt;
         &lt;p&gt;Dit is de meer expliciete vorm van de bovenstaande code.&lt;/p&gt;
         &lt;code class="block"&gt;restore-user --id 345&lt;/code&gt;</value>
@@ -210,7 +210,7 @@
     <value>Prullenbak legen</value>
   </data>
   <data name="recyclebin_EmptyRecycleBinConfirm.Text" xml:space="preserve">
-    <value>Wilt u alle bestanden in de prullenbak legen?</value>
+    <value>Wil je alle bestanden in de prullenbak legen?</value>
   </data>
   <data name="recyclebin_Modules.Text" xml:space="preserve">
     <value>Modules</value>
@@ -240,49 +240,49 @@
     <value>Pagina's</value>
   </data>
   <data name="recyclebin_RemoveModuleConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze module wenst de verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze module wenst de verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RemoveModulesConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze modules wenst te verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze modules wenst te verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RemovePageConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze pagina wilt verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze pagina wilt verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RemovePagesConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u de geselecteerde pagina's wilt verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je de geselecteerde pagina's wilt verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RemoveUserConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze gebruiker wilt verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze gebruiker wilt verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RemoveUsersConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u de geselecteerd gebruiker wilt verwijderen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je de geselecteerd gebruiker wilt verwijderen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_Restore.Text" xml:space="preserve">
     <value>Herstellen</value>
   </data>
   <data name="recyclebin_RestoreModuleConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze module wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze module wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RestoreModulesConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u de geselecteerde modules wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je de geselecteerde modules wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RestorePageConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze pagina wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze pagina wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RestorePageInvalid.Text" xml:space="preserve">
     <value>Je moet eerst de ouder pagina herstellen</value>
   </data>
   <data name="recyclebin_RestorePagesConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u de geselecteerde pagina's wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je de geselecteerde pagina's wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RestorePagesInvalid.Text" xml:space="preserve">
-    <value>De pagina's die u probeerde te herstellen zou gelijk de ouder moeten selecteren.</value>
+    <value>De pagina's die je probeerde te herstellen zou gelijk de ouder moeten selecteren.</value>
   </data>
   <data name="recyclebin_RestoreUserConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u deze gebruiker wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je deze gebruiker wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_RestoreUsersConfirm.Text" xml:space="preserve">
-    <value>&lt;p&gt;Bevestig dat u de geselecteerde gebruikers wilt herstellen.&lt;/p&gt;</value>
+    <value>&lt;p&gt;Bevestig dat je de geselecteerde gebruikers wilt herstellen.&lt;/p&gt;</value>
   </data>
   <data name="recyclebin_Title.Text" xml:space="preserve">
     <value>Prullenbak</value>
